--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,7 @@
-- task: DotNetCoreCLI@2
+trigger:
+- main
+
+task: DotNetCoreCLI@2
   dispalyName: 'Build the project'
   inputs:
     command: 'build'
