--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,7 @@
 trigger:
 - main
 
-task: DotNetCoreCLI@2
+- task: DotNetCoreCLI@2
   dispalyName: 'Build the project'
   inputs:
     command: 'build'
