Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,13 @@ steps:
 #   inputs:
 #     verbose: false
 
+- task: Npm@1
+  inputs:
+    command: 'install'
+    workingDir: '$(System.DefaultWorkingDirectory)/ID_CLIENT'
+    verbose: false
+  displayName: 'npm install'
+
 # - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
 #   displayName: 'Compile Sass assets'
 
