--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,27 +21,27 @@ steps:
     packageType: sdk
     version: '6.x'
 
-# - task: Npm@1
-#   displayName: 'Run npm install'
-#   inputs:
-#     verbose: false
-
 - task: Npm@1
+  displayName: 'Run npm install'
   inputs:
-    command: 'install'
-    workingDir: '$(System.DefaultWorkingDirectory)'
     verbose: false
-  displayName: 'npm install'
 
-# - script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
-#   displayName: 'Compile Sass assets'
+# - task: Npm@1
+#   inputs:
+#     command: 'install'
+#     workingDir: '$(System.DefaultWorkingDirectory)'
+#     verbose: false
+#   displayName: 'npm install'
 
-# - task: gulp@1
-#   displayName: 'Run gulp tasks'
+- script: './node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot'
+  displayName: 'Compile Sass assets'
 
-# - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
-#   displayName: 'Write build info'
-#   workingDirectory: Tailspin.SpaceGame.Web/wwwroot
+- task: gulp@1
+  displayName: 'Run gulp tasks'
+
+- script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
+  displayName: 'Write build info'
+  workingDirectory: Tailspin.SpaceGame.Web/wwwroot
 
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
