Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
     version: '6.x'
 
 - task: NodeTool@0
-  displayName: 'Run Node install'
+  displayName: 'Run Node.js install'
   inputs:
     versionSpec: '12.x' 
     
